--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,7 @@
 sonar.organization=ondimon
 sonar.projectKey=ondimon_javacourse
-sonar.sources=.
+sonar.sources=src
+sonar.sourceEncoding=UTF-8
+sonar.language=java
 sonar.projectName=java course
+sonar.java.source=11
